--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -37,6 +37,36 @@
         </li>
         {{- end }}
       </ul>
+      <div class="nav-item">
+        <button type="button" id="searchButton" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#searchModal">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+</svg> Search
+        </button>
+      </div>
     </div>
   </div>
 </nav>
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="searchModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <input data-gc-search-input=""
+              class="form-control"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+      </div>
+      <div class="modal-body list-group" data-gc-search-results="">
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
