--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,32 @@
-.btn-toggle::before {
-    width: 1.25em;
-    line-height: 0;
-    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-    transition: transform .35s ease;
-    transform-origin: .5em 50%;
+#TableOfContents ul {
+  list-style-type: none;
+  padding-left: 0;
 }
 
-.btn-toggle[aria-expanded="true"] {
-    color: rgba(var(--bs-emphasis-color-rgb), .85);
+#TableOfContents ul ul {
+    padding-left: 1rem;
 }
 
-.btn-toggle[aria-expanded="true"]::before {
-    transform: rotate(90deg);
+#TableOfContents a {
+    display: block;
+    padding: 0.125rem 0 0.125rem 0.75rem;
+    color: inherit;
+    text-decoration: none;
+    border-left: 0.125rem solid transparent;
+}
+
+#TableOfContents a:hover,
+#TableOfContents a.active {
+    color: var(--bs-indigo);
+    border-left-color: var(--bs-indigo);
+}
+
+.cg-toc {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 5rem;
+    right: 0;
+    z-index: 2;
+    height: calc(100vh - 7rem);
+    overflow-y: auto;
 }
