--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
   <div class="{{.Site.Param "bootstrap_container" }}">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-white text-decoration-none">
-        <img src="images/logo.png" class="bi me-2" width="40" height="32"></img>
+        <img src="{{ .Site.BaseURL | default "/" }}images/logo.png" class="bi me-2" width="40" height="32"></img>
         <span class="fs-4">{{ site.Title }}</span>
     </a>
     <button
