--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,5 +7,8 @@
 {{- if and .Page.IsSection .Page.Pages -}}
 {{ $first := index .Page.Pages 0 }}
 <meta http-equiv="refresh" content="0; url={{ $first.RelPermalink}}"/>
+{{- else if .IsHome -}}
+{{ $firstMenu := index .Site.Menus.main 0 }}
+<meta http-equiv="refresh" content="0; url={{ $firstMenu.URL}}"/>
 {{- end -}}
 {{ partialCached "head/css.html" . }}
