--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,12 @@
     --cg-sidebar-link-bg: rgba(var(--cg-violet-rgb), .1);
 }
 
+.cg-navbar {
+    padding: 0.75rem 0;
+    background-color: transparent;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15), inset 0 -1px 0 rgba(255, 255, 255, 0.15);
+}
+
 #TableOfContents ul {
   list-style-type: none;
   padding-left: 0;
