--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,9 +1,11 @@
 {{ $currentPage := . }}
-<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+{{ $menuSettings := .Site.Param "menu" }}
+{{ $navbar := $menuSettings.navbar }}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top cg-navbar">
   <div class="{{.Site.Param "bootstrap_container" }}">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-white text-decoration-none">
-        <img src="{{ .Site.BaseURL | default "/" }}images/logo.png" class="bi me-2" width="40" height="32"></img>
-        <span class="fs-4">{{ site.Title }}</span>
+        {{- if $navbar.display_logo }}<img src="{{ .Site.BaseURL | default "/" }}images/logo.png" class="bi me-2" width="40" height="32"></img>{{- end }}
+        {{- if $navbar.display_title }}<span class="fs-4">{{ .Site.Title }}</span>{{- end }}
     </a>
     <button
       class="navbar-toggler"
@@ -38,11 +40,13 @@
         {{- end }}
       </ul>
       <div class="nav-item">
+        {{- if $navbar.display_search }}
         <button type="button" id="searchButton" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#searchModal">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
 </svg> Search
         </button>
+        {{- end }}
       </div>
     </div>
   </div>
