--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,1 +1,2 @@
 <!-- add your own partials with the same name to add a logo  -->
+<img src="{{ .Site.BaseURL | default "" }}/images/logo.png" class="bi me-2" width="40" height="40"></img>
