--- a/layouts/_default/_markup/render-codeblock-bash.html
+++ b/layouts/_default/_markup/render-codeblock-bash.html
@@ -1,11 +1,1 @@
-<pre 
-    {{ if .Attributes.cli }}
-        class="command-line" 
-        {{ if .Attributes.user }}data-user="{{.Attributes.user}}"{{end}}
-        {{ if .Attributes.host }}data-host="{{.Attributes.host}}"{{end}}
-        {{ if .Attributes.prompt }}data-prompt="{{.Attributes.prompt}}"{{end}}
-        {{ if .Attributes.output }}data-output="{{.Attributes.output}}"{{end}}
-    {{ end }}>
-<code class="language-{{.Type}}" >{{- .Inner }}</code></pre>
-{{ .Page.Store.Set "hasPrism" true }}
-{{ .Page.Store.Set "hasPrismCommandLine" true }}
+{{ partial "bash-codeblock.html" .}}
