--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@
     border-left-color: var(--bs-indigo);
 }
 
-.cg-toc {
+.cg-toc, .cg-sidenav {
     position: -webkit-sticky;
     position: sticky;
     top: 5rem;
