add path to search

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -70,6 +70,7 @@
       <div class="modal-body list-group" data-gc-search-results="">
       </div>
       <div class="modal-footer">
+        Powered by <a href="https://lunrjs.com/" target="_blank">lunr.js</a>
       </div>
     </div>
   </div>
