--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -20,8 +20,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        {{ if not $currentPage.FirstSection.Params.standaloneMenu }}
         {{- range site.Menus.main }}
-        <li class="nav-item">
+        <li class="nav-item {{ if .Page.Params.standaloneMenu }}d-none{{ end }}">
           {{ if $currentPage.IsMenuCurrent "main" . }}
           <a class="nav-link active" aria-current="page" href="{{ .URL }}"
             >{{ .Name }}</a
@@ -38,10 +39,11 @@
           {{ end }}
         </li>
         {{- end }}
+        {{ end }}
       </ul>
       <div class="nav-item">
         {{- if $navbar.display_search }}
-        <button type="button" id="searchButton" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#searchModal">
+        <button type="button" id="searchButton" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#searchModal">
           <i class="bi bi-search"></i> Search
         </button>
         {{- end }}
